syntax = "proto3";

package finternet;

service Driver {
  // LoadDriver
  rpc LoadDriver(LoadDriverRequest) returns (LoadDriverResponse);

  // UnloadDriver
  rpc UnloadDriver(UnloadDriverRequest) returns (UnloadDriverResponse);
}

message LoadDriverRequest { string driver_name = 1; }

message LoadDriverResponse {
  string driver_name = 1;
  string driver_version = 2;
}

message UnloadDriverRequest { string driver_name = 1; }

message UnloadDriverResponse { string driver_name = 1; }

service Bind {
  // Bind
  rpc Bind(BindRequest) returns (BindResponse);

  // Unbind
  rpc Unbind(UnbindRequest) returns (UnbindResponse);
}

message BindRequest {
  string driver_name = 1;
  string device_name = 2;
}

message BindResponse {
  string driver_name = 1;
  string device_name = 2;
}

message UnbindRequest { string device_name = 1; }

message UnbindResponse { string driver_name = 1; }

service Execution {
  // Execute
  rpc Execute(ExecutionRequest) returns (ExecutionResponse);
}

message ExecutionRequest { string command = 1; }
message ExecutionResponse { string output = 1; }
